themedir = $(pkgdatadir)/icons/Humanity
size = 16x16
context = actions

iconsdir = $(themedir)/$(size)/$(context)

dist_icons_DATA = \
                  albumview.png\
                  consume.png\
                  Database.png\
                  dynamic.png\
                  gmpc.png\
                  gmpc-serve.png\
                  info.png\
                  media-audiofile.png\
                  media-consume.png\
                  media-playlist.png\
                  media-playlist-repeat.png\
                  media-playlist-shuffle.png\
                  media-repeat-single.png\
                  media-tag.png\
                  playlist-browser.png\
                  playlist-search-browser.png\
                  shout.png\
                  tag-browser.png
