themedir = $(pkgdatadir)/icons/Humanity
size = 16x16
context = actions

iconsdir = $(themedir)/$(size)/$(context)

dist_icons_DATA = \
                  gmpc-metabrowser.png\
                  gmpc-database.png\
                  dynamic.png\
                  gmpc-serve.png\
                  info.png\
                  media-audiofile.png\
                  media-consume.png\
                  media-playlist.png\
                  media-repeat-single.png\
                  media-tag.png\
                  playlist-browser.png\
                  playlist-search-browser.png\
                  tag-browser.png
