themedir = $(pkgdatadir)/icons/Humanity
size = 16x16
context = status

iconsdir = $(themedir)/$(size)/$(context)

dist_icons_DATA = \
                  audio-volume-high.png\
                  audio-volume-low.png\
                  audio-volume-medium.png\
                  audio-volume-muted.png\
                  emblem-favorite.png\
                  fetching-artist.png\
                  frame-artist.png\
                  gmpc-tray-disconnected.png\
                  gmpc-tray-pause.png\
                  gmpc-tray-play.png\
                  gmpc-tray.png\
                  media-date.png\
                  media-album.png\
                  media-artist.png\
                  media-format.png\
                  media-genre.png\
                  media-num-tracks.png\
                  media-codec.png\
                  media-track-length.png\
                  no-artist.png\
                  rating.png\
                  stock_repeat.png\
                  stock_shuffle.png\
                  stylized-cover.png\
                  stylized-fetching-cover.png\
                  stylized-no-cover.png
