themedir = $(pkgdatadir)/icons/Humanity
size = 22x22
context = actions

iconsdir = $(themedir)/$(size)/$(context)

dist_icons_DATA = \
dynamic.png\
gmpc-database.png\
gmpc-metabrowser.png\
gmpc-serve.png\
info.png\
media-audiofile.png\
media-consume.png\
media-playlist.png\
media-repeat-single.png\
media-tag.png\
playlist-browser.png\
playlist-search-browser.png\
tag-browser.png
